--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -73,7 +73,7 @@ body::-webkit-scrollbar-thumb
   --input-back: #fff
   --tick: rgba(255, 255, 255, 0.3)
 
-html[data-theme='1']
+html[data-theme='light']
   --background-color: #fff
   --color: #000
   --background-el: rgba(255,255,255, 1)
